# Ravelin

./: CMakeLists.txt  COPYING  README.md  index.html  params.json
docs/: Ravelin  general  general.tex  link-joint-frames.graffle
doxygen/: AAngle_8h_source.html  AAngled_8h_source.html  AAnglef_8h_source.html  ArticulatedBody_8h_source.html  ArticulatedBodyd_8h_source.html  ArticulatedBodyf_8h_source.html  CRBAlgorithm_8h_source.html  CRBAlgorithmd_8h_source.html  CRBAlgorithmf_8h_source.html  ColumnIterator_8h_source.html  ColumnIteratord_8h_source.html  ColumnIteratorf_8h_source.html  Constants_8h_source.html  DataMismatchException_8h_source.html  DynamicBody_8h_source.html  DynamicBodyd_8h_source.html  DynamicBodyf_8h_source.html  FSABAlgorithm_8h_source.html  FSABAlgorithmd_8h_source.html  FSABAlgorithmf_8h_source.html  FastThreadable_8h_source.html  FixedJoint_8h_source.html  FixedJointd_8h_source.html  FixedJointf_8h_source.html  FrameException_8h_source.html  InvalidIndexException_8h_source.html  InvalidTransformException_8h_source.html  Joint_8h_source.html  Jointd_8h_source.html  Jointf_8h_source.html  LinAlg_8h_source.html  LinAlgd_8h_source.html  LinAlgf_8h_source.html  Log_8h_source.html  Matrix2_8h_source.html  Matrix2d_8h_source.html  Matrix2f_8h_source.html  Matrix3_8h_source.html  Matrix3d_8h_source.html  Matrix3f_8h_source.html  (+477 more)
example/: block.cpp  doublependulum.cpp  integrate.h  pendulum.cpp  urdf.cpp
include/Ravelin/: AAngle.h  AAngled.h  AAnglef.h  ArticulatedBody.h  ArticulatedBodyd.h  ArticulatedBodyf.h  CRBAlgorithm.h  CRBAlgorithm.inl  CRBAlgorithmd.h  CRBAlgorithmf.h  ColumnIterator.h  ColumnIteratord.h  ColumnIteratorf.h  ConstMatrixCommon.inl  ConstMatrixN.inl  ConstSharedMatrixN.inl  ConstSharedVectorN.inl  Constants.h  DataMismatchException.h  DynamicBody.h  DynamicBodyd.h  DynamicBodyf.h  FSABAlgorithm.h  FSABAlgorithmd.h  FSABAlgorithmf.h  FastThreadable.h  FixedJoint.h  FixedJointd.h  FixedJointf.h  FrameException.h  InvalidIndexException.h  InvalidTransformException.h  Joint.h  Jointd.h  Jointf.h  LinAlg.h  LinAlg.inl  LinAlgd.h  LinAlgf.h  Log.h  (+166 more)
src/: .SpatialRBInertiaf.cpp.swp  AAngle.cpp  AAngled.cpp  AAnglef.cpp  ArticulatedBody.cpp  ArticulatedBodyd.cpp  ArticulatedBodyf.cpp  CRBAlgorithm.cpp  CRBAlgorithmd.cpp  CRBAlgorithmf.cpp  FSABAlgorithm.cpp  FSABAlgorithmd.cpp  FSABAlgorithmf.cpp  FixedJoint.cpp  FixedJointd.cpp  FixedJointf.cpp  Joint.cpp  Jointd.cpp  Jointf.cpp  LinAlg.cpp  LinAlgd.cpp  LinAlgf.cpp  Log.cpp  Matrix2.cpp  Matrix2d.cpp  Matrix2f.cpp  Matrix3.cpp  Matrix3d.cpp  Matrix3f.cpp  MatrixN.cpp  MatrixNd.cpp  MatrixNf.cpp  MovingTransform3.cpp  MovingTransform3d.cpp  MovingTransform3f.cpp  Operatorsd.cpp  Operatorsf.cpp  Origin2.cpp  Origin2d.cpp  Origin2f.cpp  (+108 more)
test/: Arithmetic.cpp  CMakeLists.txt  Dynamics.cpp  Inertia.cpp  Integration.cpp  LinearAlgebra.cpp  MovingTransform.cpp  Sparse.cpp  Test.cpp  TestDynamics.cpp  TestIntegration.cpp  TestJoint.cpp  TestRCAB.cpp  TestUtils.cpp  UnitTesting.hpp  pendulum-fixed.urdf  pendulum-urdf.xml  pr2.urdf  rmp_440SE.urdf
